--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="header-container">
-      <h1 id="title">Worldwide holidays and observances</h1>
+      <h1 class="title">Worldwide holidays and observances</h1>
       <div class="img-container">
         <img
           src="https://calendarific.com/images/hero2.svg"
