--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 
     <div class="main-container"></div>
     <script src="script.js"></script>
-    <!-- <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script> -->
+    <script src="https://app.zenclass.in/sheets/v1/js/zen/suite/bundle.js"></script>
   </body>
 </html>
