--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
   <body>
     <div class="header-container">
       <h1 class="title">Worldwide holidays and observances</h1>
-      <div class="img-container">
-        <img
-          src="https://calendarific.com/images/hero2.svg"
-          alt=""
-          class="image"
-        />
+      <div class="search-container">
+        <div class="img-container">
+          <img
+            src="https://calendarific.com/images/hero2.svg"
+            alt=""
+            class="image"
+          />
+        </div>
+        <input type="search" class="search form-control" />
       </div>
     </div>
 
