--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
             class="image"
           />
         </div>
-        <input type="search" class="search form-control" />
+        <input
+          type="search"
+          class="search form-control"
+          placeholder="Search country"
+        />
       </div>
     </div>
 
